BUG#32434: Replication doesn't work between 5.2.1-a_drop6p9-log and 5.1.22-ndb-6.3.6-telco Problem: When slave reads format_description_log_event, it checks if the master is a version that uses an old binlog format. See also BUG#27779. Not all possible server_versions were listed. Fix: Check for all server_versions which use the old binlog_format.

sql/log_event.cc:
  In the place where we check if server_version indicates that master is
  the alcatel branch, we now check all currently possible alcatel versions,
  not just a subset. Added comment to explain which clones are affected.